# apollo-auto-server/src/routes/index.ts
@@ -1,5 +1,9 @@
-import auth from  "./auth"
+import auth from './auth'
+import cookies from './cookies'
+import jobs from './jobs'
 
 export default {
   auth,
-};
+  cookies,
+  jobs,
+}
